chore: package.json keyword changed

--- a/package.json
+++ b/package.json
@@ -44,45 +44,33 @@
     "url": "git+https://github.com/bgarciaoliveira/openai-enhanced-sdk.git"
   },
   "keywords": [
-    "OpenAI",
-    "TypeScript",
-    "SDK",
     "AI",
     "API",
-    "OpenAI",
-    "SDK",
-    "AI",
-    "completions",
-    "AI",
-    "embeddings",
-    "Proxy",
-    "support",
+    "Axios",
+    "Chat",
     "Context",
-    "management",
-    "Streaming",
-    "API",
+    "Error",
     "GPT-4",
     "GPT-4o",
-    "GPT-4o",
-    "mini",
-    "o1-preview",
-    "o1-mini",
-    "o1",
-    "Chat",
-    "completions",
-    "AI",
-    "integration",
-    "Error",
-    "handling",
-    "AI",
-    "logging",
-    "Axios",
-    "Retry",
-    "mechanism",
     "OpenAI",
-    "client",
+    "Proxy",
+    "Retry",
+    "SDK",
+    "Streaming",
     "TypeScript",
-    "SDK"
+    "client",
+    "completions",
+    "embeddings",
+    "handling",
+    "integration",
+    "logging",
+    "management",
+    "mechanism",
+    "mini",
+    "o1",
+    "o1-mini",
+    "o1-preview",
+    "support"
   ],
   "author": "bgarciaoliveira",
   "license": "MIT",
