--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
       "forceConsistentCasingInFileNames": true,
       "skipLibCheck": true,
       "resolveJsonModule": true,
+      "removeComments": true,
+      "noUnusedLocals": true,
+      "noUnusedParameters": true,
       "baseUrl": "./",
       "paths": {
         "*": ["src/*"]
